--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sobre a Mirror Fashion</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <img src="img/logo.png" alt="Logo da Mirror Fashion" >
+
+    <h1> Mirror Fashion</h1>
+    <p> A Mirror Fashion é a maior empresa comércio eletrônico no segmento de moda em todo o mundo. 
+Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de 
+participação em 118 deles.</p>
+
+<img src="img/centro-distribuicao.png" alt="Centro de Distribuição" >
     
 </body>
 </html>
