--- a/sobre.html
+++ b/sobre.html
@@ -5,10 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre a Mirror Fashion</title>
     <link rel="stylesheet" href="estilos.css">
+    <nav id="menu" >
+        <h1>Menu Principal</h1>
+    <ul type="disc">
+        <li onmouseover="mudafoto('_imagens/home.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+        <li onmouseover="mudafoto('_imagens/especificacoes.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+        <li onmouseover="mudafoto('_imagens/fotos.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+        <li onmouseover="mudafoto('_imagens/multimidia.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a Href="multimidia.html">Multimídia</a></li>
+        <li onmouseover="mudafoto('_imagens/contato.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+    </ul>
+        </nav>
 </head>
 <body>
     <h1> Historia </h1>
-    <figure>
+    <figure id="familia-pelho">
         <img src="img/familia-pelho.jpg" alt="Foto da família Pelho">
         <figcaption>Família Pelho</figcaption>
       </figure>
@@ -22,14 +32,18 @@
        Bateu a marca de 100 países em apenas 15 anos de existência. Até hoje, já atendeu 740 milhões 
        de usuários diferentes, em bilhões de diferentes pedidos.</p>
 
-       <p>O crescimento em número de funcionários é também assombroso. Hoje, é a maior empregadora do 
+    <p>O crescimento em número de funcionários é também assombroso. Hoje, é a maior empregadora do 
         Brasil, mas mesmo após apenas 5 anos de sua existência, já possuía 30 mil funcionários. Fora do 
         Brasil, há 240 mil funcionários, além dos 890 mil brasileiros nas instalações de Jacarezinho e 
         nos escritórios em todo país.</p>
 
-        <p> Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios, 
-            homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror 
-            Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
-
+    <p> Dada a importância econômica da empresa para o Brasil, a família Pelho já recebeu diversos prêmios, 
+        homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da Mirror 
+        Fashion, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.</p>
+        <footer id="rodape">
+            <p>Copyright 2013 &copy;- by Jorge Otavio Teles <br/>
+                <a href="http://facebook.com/jorge.otavio1" target="_blank"> Facebook  </a> |
+                <a href="http://twitter.com/JorgeOtavioT" target="_blank"> Twitter </a> </p>
+        </footer>
 </body>
 </html>
