--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre a Mirror Fashion</title>
     <link rel="stylesheet" href="estilos.css">
+    <nav id="menu" >
+        <h1>Menu Principal</h1>
+    <ul type="disc">
+        <li onmouseover="mudafoto('_imagens/home.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+        <li onmouseover="mudafoto('_imagens/especificacoes.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+        <li onmouseover="mudafoto('_imagens/fotos.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+        <li onmouseover="mudafoto('_imagens/multimidia.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a Href="multimidia.html">Multimídia</a></li>
+        <li onmouseover="mudafoto('_imagens/contato.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+    </ul>
+        </nav>
 </head>
 <body>
     <img src="img/logo.png" alt="Logo da Mirror Fashion" >
@@ -13,8 +23,15 @@
     <p> A Mirror Fashion é a maior empresa comércio eletrônico no segmento de moda em todo o mundo. 
 Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de 
 participação em 118 deles.</p>
-
-<img src="img/centro-distribuicao.png" alt="Centro de Distribuição" >
+<figure id="centro-distribuicao">
+    <img  src="img/centro-distribuicao.png" alt="Centro de Distribuição" >
+    <figcaption>Centro de distribuição da Mirror Fashion</figcaption>
+</figure>
+<footer id="rodape">
+    <p>Copyright 2013 &copy;- by Jorge Otavio Teles <br/>
+        <a href="http://facebook.com/jorge.otavio1" target="_blank"> Facebook  </a> |
+        <a href="http://twitter.com/JorgeOtavioT" target="_blank"> Twitter </a> </p>
+</footer>
     
 </body>
-</html>
+</html>   
