--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre a Mirror Fashion</title>
     <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
     <nav id="menu" >
         <h1>Menu Principal</h1>
     <ul type="disc">
@@ -14,12 +16,12 @@
         <li onmouseover="mudafoto('_imagens/multimidia.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a Href="multimidia.html">Multimídia</a></li>
         <li onmouseover="mudafoto('_imagens/contato.png')" onmouseout="mudafoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
     </ul>
-        </nav>
-</head>
-<body>
     <img src="img/logo.png" alt="Logo da Mirror Fashion" >
 
     <h1> Mirror Fashion</h1>
+    <nav id="menu" >
+        <h1>Menu Principal</h1>
+   
     <p> A Mirror Fashion é a maior empresa comércio eletrônico no segmento de moda em todo o mundo. 
 Fundada em 1932, possui filiais em 124 países, sendo líder de mercado com mais de 90% de 
 participação em 118 deles.</p>
